removing all new and trying to add one at a time.

--- a/manuscript/class2temp.tex
+++ b/manuscript/class2temp.tex
@@ -141,7 +141,7 @@ Los derivadas de acci\'on son los variables conjugados. Tambi\'en son relacioned
 	\item El inductancia magnetico (B) es el derivada de la acci\'on de la campo electromagnetico con respecto de la magnetizaci\'on a la evento.
 	\item El potencial gravitacional a una evento es el acci\'on de la campo gavitacional con respocto a la densidad de masa en la evento.
 \end{enumerate}
-
+%stopped here
 
 \subsection{Unidades tipicos de energ\'ia}
 
